<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AndroidHello</string>
    <string name="value_1">1</string>
    <string name="value_2">2</string>
    <string name="value_3">3</string>
    <string name="value_4">4</string>
    <string name="value_5">5</string>
    <string name="value_6">6</string>
    <string name="value_7">7</string>
    <string name="value_8">8</string>
    <string name="value_9">9</string>
    <string name="value_0">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="mult">*</string>
    <string name="div">/</string>
    <string name="rez">=</string>
    <string name="C">C</string>
    <string name="Bin">Bin</string>
    <string name="Dec">Dec</string>
    <string name="Hex">Hex</string>
    <string name="comma">.</string>
    <string name="sign">+/-</string>
    <string name="left_bkt">(</string>
    <string name="right_bkt">)</string>
    <string name="progress">)</string>
    <string name="exit">EXIT</string>
    <string name="selectNotation">Notation</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="back"><![CDATA[<--]]></string>
    <!--<string name="value_0">0</string>-->

</resources>
